tests/paczka1/small_fuzzy/47968547.err
Error in line 2: CpvbC A587 99,3
Error in line 3: CpvbC S566 82,5
